syntax = "proto2";

package test_default_values_dont_use_cow;

message TestDefaultValuesDontUseCowOptional {
    optional string string_field = 14            [default = "abc\n22"];
    optional bytes bytes_field = 15              [default = "cde\n33"];
}

message TestDefaultValuesDontUseCowRequired {
    required string string_field = 14            [default = "abc\n22"];
    required bytes bytes_field = 15              [default = "cde\n33"];
}
